2009-05-27  Hans Boehm <Hans.Boehm@hp.com> (Really Ivan Maidanski)
	(diff26)
	* win32_threads.c: restructure parallel marking mutex intialization.
	* win32_threads.c, alloc.c, darwin_stop_world.c, mallocx.c, mark.c,
	pthread_stop_world.c, pthread_support.c: Add runtime conditions
	on GC_parallel were appropriate.
	* pthread_support.c: Condition marker_bsp on ia64.
	(GC_segment_is_thread_stack): Fix loop upper bound.
	* reclaim.c: Limit some assertions to PARALLEL_MARK.
	* pthread_support.c: Don't acquire mark lock for thread-local
	allocation.
	* include/private/gc_priv.h: Don't define parallel mark sync
	support just for THREAD_LOCAL_ALLOC.

2009-05-27  Hans Boehm <Hans.Boehm@hp.com> (Really Ivan Maidanski)
	(diff39)
	* include/private/gcconfig.h: refine MINGW32 test.
	* mark.c: Add win64/gcc tests.

2009-05-27  Hans Boehm <Hans.Boehm@hp.com> (Really Ivan Maidanski)
	(diff86_cvs, resembling diff28, diff32, diff33, diff38, diff68 partly)
	* test.c (fork_a_thread, reverse_test, alloc8bytes, tree_test,
        typed_test, run_one_test, check_heap_stats, main, test): Replace
        all K&R-style function definitions with ANSI C ones.
        * trace_test.c (main): Ditto.
        * test.c (GC_COND_INIT): Define as GC_INIT() also in case of
        THREAD_LOCAL_ALLOC.
        * test.c (reverse_test): Call fork_a_thread() only if GC_PTHREADS
        or GC_WIN32_THREADS; remove fork_a_thread() macros definition.
        * test.c (reverse_test): Use "volatile" when clearing "b" and "c"
        local variables (to suppress "assigned value is never used"
        compiler warning).
        * test.c (tree_test): Use public GC_noop1() instead of private
        GC_noop().
        * test.c (typed_test): Ditto.
        * test.c (check_heap_stats): Define and assign value to
        "late_finalize_count" local variable only if its value is used
        (if FINALIZE_ON_DEMAND defined).
        * test.c (main): Remove DJGPP-specific initialization of